# rds_cost_estimator

./: .env.example  .gitignore  README.md  cost_report_template_v2.md  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/specs/code-quality-improvements/: .config.kiro  design.md  requirements.md  tasks.md
sample_reports/sample_01_replatform/: dbcsi_awr_report.md  dbcsi_report.md  migration_recommendation.md  sample_awr_01_replatform_enterprise.out
sample_reports/sample_02_mysql/: dbcsi_report.md  migration_recommendation.md  sample_awr_02_mysql_simple_crm.out
sample_reports/sample_03_postgresql/: dbcsi_awr_report.md  dbcsi_report.md  migration_recommendation.md  sample_awr_03_postgresql_analytics.out
sample_reports/sample_04_rds_postgresql/: dbcsi_report.md  migration_recommendation.md  sample_awr_04_rds_postgresql.out
sample_reports/sample_05_rds_mysql/: dbcsi_report.md  migration_recommendation.md  sample_awr_05_rds_mysql.out
sample_reports/sample_06_rds_sqlserver/: dbcsi_report.md  migration_recommendation.md  sample_awr_06_rds_sqlserver.out
src/rds_cost_estimator/: __init__.py  __main__.py  bedrock_client.py  cli.py  cost_table.py  db_store.py  document_parser.py  estimator.py  exceptions.py  instance_utils.py  models.py  pricing_client.py  renderer.py  template_builder.py
tests/: conftest.py  test_cli.py  test_cost_table.py  test_db_store.py  test_document_parser.py  test_estimator.py  test_exceptions.py  test_instance_utils.py  test_models.py  test_pricing_client.py  test_renderer.py  test_template_builder.py
(+12 files in other folders)
